@@ -1683,6 +1683,8 @@ int server_name2index(char *svname, __u32 *idx, char **endptr)
                 rc = LDD_F_SV_TYPE_OST;
         else
                 return(-EINVAL);
+        if (strcmp(dash + 4, "all") == 0)
+                return rc | LDD_F_SV_ALL;
 
         index = simple_strtoul(dash + 4, endptr, 16);
         *idx = index;
